#318 Fix tag icon button height and adjust horizontal alignment.

--- a/src/scss/components/_collection-tree.scss
+++ b/src/scss/components/_collection-tree.scss
@@ -15,6 +15,7 @@
 	@include mouse-and-bp-up(md) {
 		padding: $collection-tree-padding-y 0;
 		overflow: auto;
+		line-height: $line-height-large;
 	}
 
 	section {
