--- a/src/scss/components/tag/_touch-selector.scss
+++ b/src/scss/components/tag/_touch-selector.scss
@@ -82,4 +82,10 @@
 			}
 		}
 	}
+
+	> .touch-footer {
+		.btn {
+			margin-left: -7px; // Center width collection icons
+		}
+	}
 }
