--- a/src/scss/partials/_sidebar.scss
+++ b/src/scss/partials/_sidebar.scss
@@ -33,7 +33,6 @@
 
 	@include bp-up(md) {
 		flex: 0 0 $sidebar-width-md;
-		line-height: $line-height-large;
 
 		.touch & {
 			flex: 0 0 $sidebar-width-md-touch;
